2018-09-05  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Select whole number on double click in value field
	* Scroll to added/modified transaction

2018-08-04  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add comments field to split transaction dialog

2018-07-22  Nils VAN ZUIJLEN <nils.van-zuijlen@mailo.com>

	* Added translations for French

2018-06-20  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix value field conversion with dollar sign

2018-06-12  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix last date in yearly assets and liabilities bar chart hover info

2018-06-10  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix categories comparison report description selection list
	* Fix Qt Charts < 5.7.0 compability

2018-06-09  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use mycurrency.net html instead of the json data, which has not been for a month

2018-06-08  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Never show more than nine slices in pie chart and combine very small category posts
	* Set spacing between bars to half the bar width (unless many bars in groups)
	* Reverse order of horizontal bar chart
	* Many minor chart fixes/improvements (especially without Qt Charts)

2018-06-07  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add new default chart theme
	* Use the same color for all bars in categories comparison bar chart, show x-axis labels,
	  and remove vertical bar chart
	* Use budgeted values for more over time chart data
	* Allow user to set last month for yearly value in over time chart
	* Sort categories and accounts using total value and hide categories with zero value in charts
	* Yearly "Assets and Liabilies" bars
	* Add "Edit Account" button to ledger
	* Show incomes and expenses in profit report

2018-06-04  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Alternative to show all accounts separately in the same over time chart